{
  "version": 4,
  "terraform_version": "1.15.7",
  "serial": 16,
  "lineage": "f54bcb70-aea6-82a0-ed8f-002b703df9b2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "healthsecure_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:043309326599:internet-gateway/igw-0d85c662a5985d298",
            "id": "igw-0d85c662a5985d298",
            "owner_id": "043309326599",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "healthsecure-igw",
              "Owner": "Rakesh",
              "Project": "healthsecure"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "healthsecure-igw",
              "Owner": "Rakesh",
              "Project": "healthsecure"
            },
            "vpc_id": "vpc-0efe950aca01e069e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "043309326599",
            "id": "igw-0d85c662a5985d298",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.healthsecure_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:043309326599:route-table/rtb-050174d86d4e03947",
            "id": "rtb-050174d86d4e03947",
            "owner_id": "043309326599",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d85c662a5985d298",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "healthsecure-public-rt",
              "Owner": "Rakesh",
              "Project": "healthsecure"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "healthsecure-public-rt",
              "Owner": "Rakesh",
              "Project": "healthsecure"
            },
            "timeouts": null,
            "vpc_id": "vpc-0efe950aca01e069e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "043309326599",
            "id": "rtb-050174d86d4e03947",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.healthsecure_igw",
            "aws_vpc.healthsecure_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_a_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-090a2714d0fd5fa65",
            "region": "us-east-1",
            "route_table_id": "rtb-050174d86d4e03947",
            "subnet_id": "subnet-0aa2661550374872b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "043309326599",
            "id": "rtbassoc-090a2714d0fd5fa65",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.healthsecure_igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet_a",
            "aws_vpc.healthsecure_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_b_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03f55a3c064ca1e33",
            "region": "us-east-1",
            "route_table_id": "rtb-050174d86d4e03947",
            "subnet_id": "subnet-0e3e11fd770b6a4e3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "043309326599",
            "id": "rtbassoc-03f55a3c064ca1e33",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.healthsecure_igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet_b",
            "aws_vpc.healthsecure_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "healthsecure_ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:043309326599:security-group/sg-02417e42ec8c979fa",
            "description": "Allow SSH, Jenkins, SonarQube, and app traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02417e42ec8c979fa",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Backend App",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Jenkins",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SonarQube",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9000
              }
            ],
            "name": "healthsecure-ec2-sg",
            "name_prefix": "",
            "owner_id": "043309326599",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "healthsecure-ec2-sg",
              "Owner": "Rakesh",
              "Project": "healthsecure"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "healthsecure-ec2-sg",
              "Owner": "Rakesh",
              "Project": "healthsecure"
            },
            "timeouts": null,
            "vpc_id": "vpc-0efe950aca01e069e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "043309326599",
            "id": "sg-02417e42ec8c979fa",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.healthsecure_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:043309326599:subnet/subnet-0a129981e04011d95",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a129981e04011d95",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "043309326599",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "private-subnet-a",
              "Owner": "Rakesh",
              "Project": "healthsecure"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "private-subnet-a",
              "Owner": "Rakesh",
              "Project": "healthsecure"
            },
            "vpc_id": "vpc-0efe950aca01e069e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "043309326599",
            "id": "subnet-0a129981e04011d95",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.healthsecure_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:043309326599:subnet/subnet-09120cb62abad5b6c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09120cb62abad5b6c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "043309326599",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "private-subnet-b",
              "Owner": "Rakesh",
              "Project": "healthsecure"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "private-subnet-b",
              "Owner": "Rakesh",
              "Project": "healthsecure"
            },
            "vpc_id": "vpc-0efe950aca01e069e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "043309326599",
            "id": "subnet-09120cb62abad5b6c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.healthsecure_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:043309326599:subnet/subnet-0aa2661550374872b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aa2661550374872b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "043309326599",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "public-subnet-a",
              "Owner": "Rakesh",
              "Project": "healthsecure"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "public-subnet-a",
              "Owner": "Rakesh",
              "Project": "healthsecure"
            },
            "vpc_id": "vpc-0efe950aca01e069e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "043309326599",
            "id": "subnet-0aa2661550374872b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.healthsecure_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:043309326599:subnet/subnet-0e3e11fd770b6a4e3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e3e11fd770b6a4e3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "043309326599",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "public-subnet-b",
              "Owner": "Rakesh",
              "Project": "healthsecure"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "public-subnet-b",
              "Owner": "Rakesh",
              "Project": "healthsecure"
            },
            "vpc_id": "vpc-0efe950aca01e069e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "043309326599",
            "id": "subnet-0e3e11fd770b6a4e3",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.healthsecure_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "healthsecure_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:043309326599:vpc/vpc-0efe950aca01e069e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b309bcc7f5998f6a",
            "default_route_table_id": "rtb-0f280460f95d58ff9",
            "default_security_group_id": "sg-0b0186438c29ae49d",
            "dhcp_options_id": "dopt-0832fb26a6fe10737",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0efe950aca01e069e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f280460f95d58ff9",
            "owner_id": "043309326599",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "healthsecure-vpc",
              "Owner": "Rakesh",
              "Project": "healthsecure"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "healthsecure-vpc",
              "Owner": "Rakesh",
              "Project": "healthsecure"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "043309326599",
            "id": "vpc-0efe950aca01e069e",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}